# libmylib

./: .gitignore  CMakeLists.txt  configure.ac  libmylib.pc.in
libmylib/: CMakeLists.txt  Makefile.am
libmylib/include/: mylib.h
libmylib/src/: mylib.c
myapp/: CMakeLists.txt  Makefile.am
myapp/src/: myapp.c
